k8s/recsys-retail-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recsys-retail-deployment
  labels:
    app: recsys-retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recsys-retail
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
      labels:
        app: recsys-retail
    spec:
      containers:
        - name: recsys-retail
          image: kutovaiayp/recsys-retail:service_v1        
          ports:
            - containerPort: 8000
