k8s/recsys-retail-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recsys-retail-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kutovaiayp.recsys-retail-k8s.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: recsys-retail-service
              port:
                number: 80
